starting on anharmonic wave gen

--- a/src/main/resources/program/bassoon.yaml
+++ b/src/main/resources/program/bassoon.yaml
@@ -1,10 +1,11 @@
 
 name: bassoon
+# not sure why, but it sort of sounds like a bassoon!
 
 osc1:
   midi: note-on
   type: wave
-  shape: composite
+  shape: harmonic
   waves:
     - 1     1
     - 6.3     2
