now configures main limiter. (limiter still needs to be coded!)

--- a/src/main/resources/config/main-limiter-config.yaml
+++ b/src/main/resources/config/main-limiter-config.yaml
@@ -1,14 +1,14 @@
 
 
-main-limiter:
+#  MAIN LIMITER
+#
+type: limiter
 
-  type: limiter
+# 32 bits (= 4 bytes = 8 hex digits)
+max-in: 0x7fffffff
 
-  # 32 bits (= 4 bytes = 8 hex digits)
-  max-in: 0x7fffffff
+# 16 bits (= 2 bytes = 4 hex digits)
+max-out: 0x7fff
 
-  # 16 bits (= 2 bytes = 4 hex digits)
-  max-out: 0x7fff
-
-  # headroom of 256  (= 0x100)
-  threshold: 0x7eff
+# headroom of 256  (= 0x100)
+threshold: 0x7eff
