--- a/src/main/resources/program/pwm.yaml
+++ b/src/main/resources/program/pwm.yaml
@@ -7,15 +7,7 @@ osc1:
   shape: pwm
   mod-percent: 95
   input-amp: 1000
-  out: main
-
-osc2:
-  midi: note-on
-  detune: 8
-  type: wave
-  shape: pwm
-  mod-percent: 95
-  input-amp: 1000
+  velocity-amount: 150
   out: main
 
 lfo1:
@@ -24,6 +16,16 @@ lfo1:
   shape: saw
   output-amp: 1000
   out: osc1
+
+osc2:
+  midi: note-on
+  detune: 8
+  type: wave
+  shape: pwm
+  mod-percent: 95
+  input-amp: 1000
+  velocity-amount: 150
+  out: main
 
 lfo2:
   freq: 0.11
