--- a/program/noise-sweep-filter.yaml
+++ b/program/noise-sweep-filter.yaml
@@ -1,6 +1,6 @@
 
 
-name: noise
+name: noise-sweep
 
 noise1:
   midi: note-on
@@ -20,9 +20,14 @@ vca-lfo:
 vca:
   type: op-amp
   level-scale: .005
+  out: lpf
+
+lpf:
+  type: filter
+  shape: sweep-sinc
+  midi: note-on
+  #freq: 440
   out: main
-
-
 
 
 
