--- a/program/noise-sweep-filter.yaml
+++ b/program/noise-sweep-filter.yaml
@@ -6,26 +6,28 @@ noise1:
   midi: note-on
   type: wave
   shape: noise
-  level-scale: 10
+  level-scale: 3
   out: lpf
 
-vca-lfo:
+lpf-lfo:
   type: wave
   signed: true
-  freq: .2
+  freq: .1
   shape: saw
   output-amp: 1000
   out: lpf.sweep
 
+
 lpf:
   type: filter
   shape: sweep-sinc
-  freq: 1760
-  sweep-width: 12 # semitones
+  midi: note-on
+  #freq: 1480 # F#5 about
+  sweep-width: 24 # semitones
   input-amp: 1000
   out: main
 
 #vca:
 #  type: op-amp
 #  level-scale: .005
-#  out: lpf
+#  out: main
