--- a/program/sine-iir-10k.yaml
+++ b/program/sine-iir-10k.yaml
@@ -1,12 +1,13 @@
 
 
-name: noise-iir-10k
+name: sine-iir-10k
 
-noise1:
+osc1:
   midi: note-on
   type: wave
-  shape: noise
-  level-scale: 1
+  shape: sine
+  #level-scale: 1
+  output-amp: 4000
   out: lpf
 
 lpf:
@@ -16,5 +17,6 @@ lpf:
   level-scale: 1
   out: main
 
-
+#   NOTE the level scale on this lpf!
+#
 
