--- a/program/sine-iir-5k.yaml
+++ b/program/sine-iir-5k.yaml
@@ -1,22 +1,22 @@
 
 
-name: noise-iir-440
+name: sine-iir-5k
 
-noise1:
+osc1:
   midi: note-on
   type: wave
-  shape: noise
-  level-scale: 1
+  shape: sine
+  #level-scale: 1
+  output-amp: 4000
   out: lpf
 
 lpf:
   type: filter
   shape: iir
-  key: lp_6_440
-  level-scale: 1e-11
+  key: lp_6_5k
+  level-scale: 1
   out: main
 
 #   NOTE the level scale on this lpf!
 #
-
 
