--- a/program/sine-iir-440.yaml
+++ b/program/sine-iir-440.yaml
@@ -1,18 +1,18 @@
 
 
-name: noise-iir-15k
+name: sine-iir-440
 
 noise1:
   midi: note-on
   type: wave
-  shape: noise
+  shape: sine
   level-scale: 1
   out: lpf
 
 lpf:
   type: filter
   shape: iir
-  key: lp_6_15k
+  key: lp_4_440
   level-scale: 1
   out: main
 
