--- a/program/repeater.yaml
+++ b/program/repeater.yaml
@@ -14,7 +14,7 @@ lfo1:
   freq: 0.2
   type: wave
   shape: saw
-  output-amp: 1000
+  level-override: 1000
   out: osc1.pwm
 
 vca-lfo:
@@ -22,7 +22,7 @@ vca-lfo:
   signed: false
   freq: 3
   shape: ramp-up
-  output-amp: 1000
+  level-override: 1000
   out: vca
 
 vca:
