--- a/program/test/sine-iir-2k.yaml
+++ b/program/test/sine-iir-2k.yaml
@@ -7,6 +7,8 @@ osc1:
   type: wave
   shape: sine
   #level-scale: 1
+  # level-override is useful for comparing
+  # filtered levels in Audacity
   level-override: 4000
   out: lpf
 
@@ -17,6 +19,4 @@ lpf:
   level-scale: 1
   out: main
 
-#   NOTE the level scale on this lpf!
-#
 
