--- a/program/pwm-sweep-noisy.yaml
+++ b/program/pwm-sweep-noisy.yaml
@@ -1,5 +1,8 @@
 
-name: pwm-sweep
+name: pwm-sweep-noisy
+
+# adding in the iir filter creates some
+# interesting noise in the middle registers.
 
 osc1:
   midi: note-on
@@ -50,8 +53,17 @@ lpf1:
   freq: 1480 # F#5 about
   sweep-width: 24 # semitones
   input-amp: 1000
-  out: main
+  out: lpf2
 
+
+## results in even more grit!
+#
+lpf2:
+  type: filter
+  shape: iir
+  key: lp_4_10k
+  level-scale: 1
+  out: main
 
 
 
