--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,8 @@ repositories {
 
 //  for Javadoc
 apply plugin: 'java'
+sourceCompatibility = 11
+targetCompatibility = 11
 
 configurations {
     extraLibs
