--- a/src/main/resources/program/saw-env.yaml
+++ b/src/main/resources/program/saw-env.yaml
@@ -1,6 +1,4 @@
 
-name: saw-env
-
 osc1:
   midi: note-on
   type: wave
@@ -11,11 +9,14 @@ env1:
   type: env
   midi: note-on, note-off, control
   # preset: piano
-  points: # rate level option
+  points:
+    # columns: rate level [option]
     - 0 100
     - 2 75
     - 10 60
     - 25 50 hold
     - 50 25
     - 10 10 release
+    - 20 0
+    - 50 10 alt-release
     - 20 0
