adding midi note and channel to Voice, along with maintenance of the same.

--- a/src/main/resources/program/saw-env.yaml
+++ b/src/main/resources/program/saw-env.yaml
@@ -7,6 +7,9 @@ osc1:
 
 env1:
   type: env
+  # meaning, when this envelope finishes its cycle,
+  # it calls synth.noteEnded(voice.midiChan, voice.midiNote)
+  terminate-voice: true
   midi: note-on, note-off, control
   # preset: piano
   points:
