Completed intake of YAML parameters for Env; next: the state machine.

--- a/program/saw-env.yaml
+++ b/program/saw-env.yaml
@@ -24,5 +24,13 @@ env1:
     - 100 7 alt-release
 
   out: main
+  out-level: osc2.pwm
+  out-level-amp: 2222
+
+osc2:
+  midi: note-on
+  type: wave
+  shape: pwm
+  out: main
 
 
