--- a/program/test-env/env-00.yaml
+++ b/program/test-env/env-00.yaml
@@ -13,7 +13,7 @@ env1:
     - 1000 100
     - 1000 50 hold
     - 5000 0
-#    - 1e9 0 alt-release
-    - 50 0 alt-release   # TODO - neither of these alt releases are working
+    - 1e9 0 alt-release
+#    - 50 0 alt-release   # TODO - neither of these alt releases are working
 
   out: main
