--- a/program/test-fm/test-fm3.yaml
+++ b/program/test-fm/test-fm3.yaml
@@ -26,12 +26,30 @@ osc7:
   out: env1
   level-scale: 2
 
+mod-osc3:
+  freq: 4.3
+  type: wave
+  shape: saw
+  level-override: 1000
+  out: env2
+
+env2:
+  type: env
+  midi: note-on
+  points:
+    - 500 0
+    - 250 100 re-trigger
+    - 500 25
+    - 10000 0
+  out: osc8.log
+
+
 osc8:
   midi: note-on
   type: wave
   shape: saw
   input-log:
-    semitones: -.03
+    semitones: .7
     amp: 1000
   out: env1
   level-scale: 2
@@ -65,4 +83,42 @@ env1:
     - 1000 0
 
   out: main
+
+
+  ## -- ## --  ## -- ## --  ## -- ## --  ## -- ## -- ##
+
+   #  bell
+
+osc1:
+  midi: note-on
+  offset: 8
+  detune: 18
+  type: wave
+  shape: saw
+  out: vca
+
+osc2:
+  midi: note-on
+  type: wave
+  offset: 31
+  shape: saw
+  out: vca
+
+# since the waves are unsigned, this is now a
+# ring modulator
+vca:
+  type: op-amp
+  level-scale: .3
+  out: env
+
+env:
+  type: env
+  midi: note-on, note-off, control
+  points:
+    - 7 100
+    - 8 75
+    - 5000 0
+  out: main
+  level-scale: .01
+
 
