halfway through adding channel components.

--- a/program/test-channel/channel-pwm.yaml
+++ b/program/test-channel/channel-pwm.yaml
@@ -18,7 +18,7 @@ osc1:
   input-log:
     semitones: -.03
     amp: 1000
-  out: main
+  out: echo
 
 lfo1:
   freq: 0.2
@@ -36,7 +36,7 @@ osc2:
   mod-percent: 95
   input-amp: 1000
   velocity-amount: 150
-  out: main
+  out: echo
 
 lfo2:
   freq: 0.11
@@ -45,3 +45,34 @@ lfo2:
   shape: sine
   level-override: 1000
   out: osc2.pwm
+
+
+# Alesis  A   B   C   D
+# ctrl #  12  13  91  93
+ctrl12:
+  type: controller
+  number: 12
+  amp: 1000
+  out: echo.amount
+
+ctrl13:
+  type: controller
+  number: 13
+  amp: 400
+  out: echo.time
+
+
+echo:
+  type: echo
+  amount: 40
+  time: 250
+
+  input-amount:
+    amp: 1000
+    percent: 50
+
+  input-time:
+    amp: 1000
+    ms: 3000
+
+  out: main
