--- a/program/test-channel/test-channel3.yaml
+++ b/program/test-channel/test-channel3.yaml
@@ -1,6 +1,6 @@
 
 
-lfo-freq:
+lfo1:
   type: wave
   context: channel
   freq: 0.1
@@ -9,6 +9,26 @@ lfo-freq:
   out: osc1.pwm
 
 osc1:
+  midi: note-on
+  type: wave
+  shape: pwm
+  mod-percent: 95
+  input-amp: 1000
+  velocity-amount: 150
+  input-log:
+    semitones: -.03
+    amp: 1000
+  out: main
+
+
+lfo2:
+  type: wave
+  freq: 0.1
+  shape: saw
+  level-override: 1000
+  out: osc2.pwm
+
+osc2:
   midi: note-on
   type: wave
   shape: pwm
