--- a/program/test-effect/test-echo1.yaml
+++ b/program/test-effect/test-echo1.yaml
@@ -40,7 +40,7 @@ env:
     - 10 100 re-trigger
     - 3000 25 hold
     - 5000 0 release
-    - 20000 0 alt-release
+#    - 20000 0 alt-release
     -
   out-level: lpf.freq
   out-level-amp: 1000
@@ -112,6 +112,7 @@ echo:
     ms: 3000
 
   out: env2
+  level-scale: 2
 
 env2:
   type: env
