--- a/program/test-env/env-04.yaml
+++ b/program/test-env/env-04.yaml
@@ -10,8 +10,8 @@ env1:
   exit: true
   points:
     # columns: rate level [option]
-    - 1000 100
-    - 1000 50 hold
+    - 1000 100 hold retrigger
+    - 1000 50
     - 5000 0
     - 1e9 0 alt-release
 
