wave editor stub in place and responding

--- a/src/main/resources/program/wave-editor.yaml
+++ b/src/main/resources/program/wave-editor.yaml
@@ -1,9 +1,6 @@
 
-#  for now...
-#   todo - implement the WaveEditor component
-
 osc1:
   midi: note-on
   type: wave
-  shape: sine
+  shape: wave-editor
   out: main
