--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ plugins {
 repositories {
     // Use jcenter for resolving your dependencies.
     // You can declare any Maven/Ivy/file repository here.
-    jcenter()
+    mavenCentral()
 }
 
 //  for Javadoc
